# libnfs

./: .gitignore  CHANGELOG  CMakeLists.txt  COPYING  INSTALL  ISSUE  Makefile.AROS  Makefile.am  Makefile.in  README  README.multithreading  README.security-scan  README.win32.txt  autogen.sh  bootstrap  config.h.in  configure.ac  libnfs-sync.c  libnfs.pc.in  nfs-stream.c  win32build.bat
.github/workflows/: build.yml  codeql.yml
aros/: CMakeLists.txt  Makefile.AROS  aros_compat.c  aros_compat.h
cmake/: ConfigureChecks.cmake  FindNFS.cmake  Macros.cmake  config.h.cmake  libnfs.pc.cmake
doc/: CMakeLists.txt  Makefile.am  nfs-cat.1  nfs-cat.1.xml  nfs-cp.1  nfs-cp.1.xml  nfs-ls.1  nfs-ls.1.xml
examples/: CMakeLists.txt  Makefile.am  fuse_nfs.c  ld_nfs.c  libnfs-server.c  libnfs-server.h  nfs-cat-preadv.c  nfs-cp.c  nfs-fh.c  nfs-io.c  nfs-ln.c  nfs-ls.c  nfs-nfsstat.c  nfs-pthreads-async-readfile.c  nfs-pthreads-async-writefile.c  nfs-pthreads-example.c  nfs-pthreads-fstat.c  nfs-pthreads-writefile.c  nfs-stats-cb.c  nfs-stream.c  nfs-writefile.c  nfs4-cat-talloc.c  nfs4-cat.c  nfsclient-async.c  nfsclient-bcast.c  nfsclient-listservers.c  nfsclient-raw.c  nfsclient-sync.c  portmap-client.c  portmap-server.c  rpcbind.c
include/: Makefile.am  libnfs-multithreading.h  libnfs-private.h  libnfs-raw.h  libnfs-zdr.h  libnfs.h  slist.h
include/nfsc/: libnfs-raw.h  libnfs-zdr.h  libnfs.h
include/win32/: win32_compat.h
lib/: CMakeLists.txt  Makefile.am  init.c  krb5-wrapper.c  krb5-wrapper.h  libnfs-sync.c  libnfs-win32.def  libnfs-zdr.c  libnfs.c  libnfs.def  multithreading.c  nfs3.c  nfs_v3.c  nfs_v4.c  pdu.c  socket.c
mount/: CMakeLists.txt  Makefile.am  libnfs-raw-mount.c  libnfs-raw-mount.h  mount.c  mount.x
nfs/: CMakeLists.txt  Makefile.am  libnfs-raw-nfs.c  libnfs-raw-nfs.h  libnfs-raw-nfs.h.extra  nfs.c  nfs.x  nfsacl.c
nfs4/: CMakeLists.txt  Makefile.am  libnfs-raw-nfs4.c  libnfs-raw-nfs4.c.fragment  libnfs-raw-nfs4.h  libnfs-raw-nfs4.h.extra  nfs4.c  nfs4.x
nlm/: CMakeLists.txt  Makefile.am  libnfs-raw-nlm.c  libnfs-raw-nlm.h  nlm.c  nlm.x
nsm/: CMakeLists.txt  Makefile.am  libnfs-raw-nsm.c  libnfs-raw-nsm.h  nsm.c  nsm.x
packaging/RPM/: libnfs.spec.in  makerpms.sh
portmap/: CMakeLists.txt  Makefile.am  libnfs-raw-portmap.c  libnfs-raw-portmap.h  portmap.c  portmap.x
ps2_ee/: Makefile.PS2_EE  config.h  ps2_compat.c  ps2_compat.h
ps3_ppu/: Makefile.PS3_PPU  config.h  ps3_compat.c  ps3_compat.h
rquota/: CMakeLists.txt  Makefile.am  libnfs-raw-rquota.c  libnfs-raw-rquota.h  rquota.c  rquota.x
servers/: Makefile.am  libnfs-server.c  libnfs-server.h  rpcbind.c  rpcbind_data.c  rpcbind_data.h  rpcbind_data.x
servers/nfsd/: Makefile.am  mountd.c  mountd.h  nfsd.c
servers/rpcbind/: Makefile.am  rpcbind.c
servers/statd/: Makefile.am  rpc.statd.c
tests/: CMakeLists.txt  Makefile.am  README  functions.sh  ld_timeout.c  prog_access.c  prog_access2.c  prog_chmod.c  prog_chown.c  prog_create.c  prog_fchmod.c  prog_fchown.c  prog_fstat.c  prog_ftruncate.c  prog_lchmod.c  prog_lchown.c  prog_link.c  prog_lseek.c  prog_lstat.c  prog_mkdir.c  prog_mknod.c  prog_mount.c  prog_open_read.c  prog_open_write.c  prog_opendir.c  prog_parse_url_full.c  prog_read_update_pos.c  prog_readonly.c  prog_rename.c  prog_rmdir.c  prog_stat.c  prog_statvfs.c  prog_symlink.c  prog_timeout.c  prog_truncate.c  prog_unlink.c  prog_utimes.c  test_0100_ls_basic.sh  test_0101_ls_discover_server.sh.disabled  test_0102_ls_discover_shares.sh  (+65 more)
tls/: CMakeLists.txt  Makefile.am  handshake.c  ktls.c  tls-private.h
utils/: CMakeLists.txt  Makefile.am  nfs-cat.c  nfs-cp.c  nfs-ls.c  nfs-stat.c
win32/: CMakeLists.txt  version.rc.template  win32_compat.c  win32_compat.h  win32_errnowrapper.h  win32build.bat
win32/libnfs/: libnfs.sln  libnfs.vcxproj  libnfs.vcxproj.filters  version.rc
win32/libnfs/x64/Debug/: libnfs.dll.recipe
win32/nfs-cat/: nfs-cat.vcxproj  nfs-cat.vcxproj.filters
win32/nfs-cp/: nfs-cp.vcxproj  nfs-cp.vcxproj.filters
win32/nfs-ls/: nfs-ls.vcxproj  nfs-ls.vcxproj.filters
win32/nfs-stat/: nfs-stat.vcxproj  nfs-stat.vcxproj.filters
win32/nfsclient-async/: nfsclient-async.vcxproj  nfsclient-async.vcxproj.filters
win32/nfsclient-bcast/: nfsclient-bcast.vcxproj  nfsclient-bcast.vcxproj.filters
win32/nfsclient-listservers/: nfsclient-listservers.vcxproj  nfsclient-listservers.vcxproj.filters
win32/nfsclient-raw/: nfsclient-raw.vcxproj  nfsclient-raw.vcxproj.filters
win32/nfsclient-sync/: nfsclient-sync.vcxproj
