SUBDIRS = doc mount nfs nfs4 nlm nsm portmap rquota lib include $(MAYBE_UTILS) . $(MAYBE_EXAMPLES)
ACLOCAL_AMFLAGS = -I m4

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libnfs.pc

EXTRA_DIST = \
	README \
	COPYING \
	LICENCE-BSD.txt \
	LICENCE-GPL-3.txt \
	LICENCE-LGPL-2.1.txt \
	examples \
	libnfs.pc.in
