nfscdir = $(includedir)/nfsc
dist_nfsc_HEADERS = \
	nfsc/libnfs.h \
	nfsc/libnfs-raw.h \
	nfsc/libnfs-zdr.h \
	${abs_top_srcdir}/mount/libnfs-raw-mount.h \
	${abs_top_srcdir}/portmap/libnfs-raw-portmap.h \
	${abs_top_srcdir}/nfs/libnfs-raw-nfs.h \
	${abs_top_srcdir}/nlm/libnfs-raw-nlm.h \
	${abs_top_srcdir}/nsm/libnfs-raw-nsm.h \
	${abs_top_srcdir}/rquota/libnfs-raw-rquota.h
