nfscdir = $(includedir)/nfsc
dist_nfsc_HEADERS = \
	nfsc/libnfs.h \
	nfsc/libnfs-raw.h \
	nfsc/libnfs-zdr.h \
	../mount/libnfs-raw-mount.h \
	../portmap/libnfs-raw-portmap.h \
	../nfs/libnfs-raw-nfs.h \
	../nfs4/libnfs-raw-nfs4.h \
	../nlm/libnfs-raw-nlm.h \
	../nsm/libnfs-raw-nsm.h \
	../rquota/libnfs-raw-rquota.h

dist_noinst_HEADERS = \
	win32/win32_compat.h \
        libnfs-private.h \
        slist.h
